--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
+    android:background="@color/mainBg"
+    android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="com.truetech.xltracker.MainActivity">
 
-    <Button
-            android:text="@string/btn_exit"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:id="@+id/btn_exit"
-            android:onClick="exit"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="79dp"/>
     <ListView
             android:id="@+id/key_listView_main"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_above="@+id/btn_view_settings"
-            android:layout_marginBottom="50dp"/>
-    <Button
-            android:text="@string/btn_options"
-            android:id="@+id/btn_view_settings"
-            android:onClick="viewSettings"
-            android:layout_height="75dp"
-            android:layout_width="200dp"
-            android:layout_marginBottom="142dp"
-            android:layout_alignBottom="@+id/btn_exit"
-            android:layout_alignStart="@+id/btn_exit"/>
+            android:layout_height="450dp" />
+<View
+    android:layout_weight="1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_margin="12dp"
+    android:layout_width="match_parent"
+    android:weightSum="2"
+    android:layout_height="wrap_content">
 
-</RelativeLayout>
+    <Button
+        android:text="@string/btn_options"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:textColor="@color/white"
+        android:background="@drawable/shape_rounded_orange"
+        android:layout_height="75dp"
+        android:id="@+id/btn_view_settings"
+        android:onClick="viewSettings"
+        android:layout_marginRight="1dp"
+
+        />
+    <Button
+        android:text="@string/btn_exit"
+        android:layout_weight="1"
+        android:layout_marginRight="1dp"
+        android:textColor="@color/white"
+        android:id="@+id/btn_exit"
+        android:background="@drawable/shape_rounded_red"
+        android:onClick="exit"
+        android:layout_height="75dp"
+        android:layout_width="0dp" />
+</LinearLayout>
+
+
+</LinearLayout>
