--- a/app/src/main/res/layout/password_dialog.xml
+++ b/app/src/main/res/layout/password_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/eight_pipup"
               android:id="@+id/layout_root"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
@@ -7,13 +8,17 @@
               android:padding="10dp" >
 
     <TextView
+        android:layout_margin="12dp"
             android:id="@+id/textViewDialogPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:text="@string/password_dialog_textView"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
             android:id="@+id/editTextDialogPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
